docs(swagger): remove admin export endpoint from api docs
